--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "express-device": "^0.4.2",
     "express-ejs-layouts": "^2.5.0",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
+    "express-unless": "^0.5.0",
     "method": "^2.0.0",
     "mongoose": "^5.8.10",
     "multer": "^1.4.2",
